--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -142,6 +142,12 @@
      be invisible. Use JavaScript to change the
      opacity and make it visible. */
   opacity: 0;
+  transition: 0.15s ease;
+}
+
+.added-to-cart-visible {
+  opacity: 1;
+  transition: 0.15s ease;
 }
 
 .added-to-cart img {
